--- a/index.html
+++ b/index.html
@@ -103,8 +103,7 @@
       <div class="container">
         <div class="col-lg-8 mx-auto">
           <h2>Расписание по дням</h2>
-          <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
-          <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
+          
         </div>
       </div>
     </section>
@@ -114,8 +113,7 @@
             <div class="container">
               <div class="col-lg-8 mx-auto">
                 <h2>Бюджет</h2>
-                <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
-                <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
+                
               </div>
             </div>
           </section>
@@ -166,24 +164,22 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>Контакты</h2>
-            <p>Feel free to leave us a comment on the
-              <a href="http://startbootstrap.com/template-overviews/grayscale/">Grayscale template overview page</a>
-              on Start Bootstrap to give some feedback about this theme!</p>
-            <ul class="list-inline banner-social-buttons">
+            <p>Связаться с организатором - Ульянов Алексей
+             <ul class="list-inline banner-social-buttons">
               <li class="list-inline-item">
-                <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg">
-                  <i class="fa fa-twitter fa-fw"></i>
-                  <span class="network-name">Twitter</span>
+                <a href="https://vk.com/kuvirkot" class="btn btn-default btn-lg">
+                  <i class="fa fa-vk"></i>
+                  <span class="network-name">ВКонтакте</span>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="https://github.com/BlackrockDigital/startbootstrap" class="btn btn-default btn-lg">
-                  <i class="fa fa-github fa-fw"></i>
-                  <span class="network-name">Github</span>
+                <a href="https://www.facebook.com/alexeyulyanov.ru" class="btn btn-default btn-lg">
+                  <i class="fa-facebook-official"></i>
+                  <span class="network-name">Facebook</span>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg">
+                <a href="https://plus.google.com/u/0/+AlexeyUlyanovRu" class="btn btn-default btn-lg">
                   <i class="fa fa-google-plus fa-fw"></i>
                   <span class="network-name">Google+</span>
                 </a>
