--- a/index.html
+++ b/index.html
@@ -760,7 +760,7 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>Контакты</h2>
-            <p>Связаться с организатором - Ульянов Алексей
+            <h5>Связаться с организатором - Ульянов Алексей</h5>
               <ul class="list-inline banner-social-buttons">
                 <li class="list-inline-item">
                   <a href="https://vk.com/kuvirkot" class="btn btn-default btn-lg">
@@ -781,6 +781,13 @@
                   </a>
                 </li>
               </ul>
+              <h5>Экспедиция проводится совместно с командой "Твоя Высота"</h5>
+              <p> <a href="http://www.tvojavysota.ru" class="btn btn-default btn-lg">сайт команды</a>
+                <a href="https://vk.com/tvojavysota" class="btn btn-default btn-lg">
+                  <i class="fa fa-vk"></i>
+                  <span class="network-name">ВКонтакте</span>
+                </a>
+              </p>
           </div>
         </div>
       </div>
