--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
   <!-- Custom fonts for this template -->
   <!-- <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css"> {# -->
   <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-  <link href='https://fonts.googleapis.com/css?family=Cabin:700' rel='stylesheet' type='text/css'> #}
+  <link href='https://fonts.googleapis.com/css?family=Cabin:700' rel='stylesheet' type='text/css'>
 
   <!-- Custom styles for this template -->
 
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.min.css">
   <link rel="stylesheet" href="css/ekko-lightbox.css">
   <link rel="icon" href="/img/dhaulagiri32.png" sizes="32x32" type="image/png">
   <link rel="icon" href="/img/dhaulagiri16.png" sizes="16x16" type="image/png">
