--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                     <li class="list-inline-item">Саллагари
                         <small> 3144м.</small></li>
                         <li class="list-inline-item">Итальянский базовый лагерь<small> 3631м.</small></li>
-                        <li class="list-inline-item">Японскийий базовый лагерь
+                        <li class="list-inline-item">Японский базовый лагерь
                             <small> 3940м.</small></li>
                             <li class="list-inline-item">базовый лагерь Дхаулагири
                                 <small> 4700м.</small></li>
@@ -405,7 +405,7 @@
                   <div class="timeline-label">
                     <div class="date">14 октября</div>
                     <h3>
-                      <span class="badge badge-pill badge-secondary">День 10</span>Переход в Японскийий базовый лагерь
+                      <span class="badge badge-pill badge-secondary">День 10</span>Переход в Японский базовый лагерь
                       <small> 3940м.</small>
                     </h3>
 
@@ -781,14 +781,7 @@
                   </a>
                 </li>
               </ul>
-              <h5>Экспедиция проводится совместно с командой "Твоя Высота"</h5>
-              <p> <a href="http://www.tvojavysota.ru" class="btn btn-default btn-lg">сайт команды</a>
-                <a href="https://vk.com/tvojavysota" class="btn btn-default btn-lg">
-                  <i class="fa fa-vk"></i>
-                  <span class="network-name">ВКонтакте</span>
-                </a>
-              </p>
-          </div>
+            </div>
         </div>
       </div>
     </section>
